--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 
 DOCKER_TAG=${DOCKER_TAG:=latest}
 USE_SINGLE_GPU='true'
-WATSONX_API_KEY='Z4l1OUq5D9-TkC0268qQYswHkjHyEf2TRxeaTpNdD6WF'
+WATSONX_API_KEY=''
 REGION='us-south'
-WATSONX_PROJECT_ID='cb6f383d-0f1c-4f86-9f19-c7245c025836'
+WATSONX_PROJECT_ID=''
