--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DOCKER_TAG=${DOCKER_TAG:=latest}
 USE_SINGLE_GPU='true'
 WATSONX_API_KEY=''
 REGION='us-south'
-WATSONX_PROJECT_ID=''
+WATSONX_PROJECT_ID='cb6f383d-0f1c-4f86-9f19-c7245c025836'
