feat: 改成兩步驟以CPU為例+提示詞

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 
 DOCKER_TAG=${DOCKER_TAG:=latest}
 USE_SINGLE_GPU='true'
-WATSONX_API_KEY=''
+WATSONX_API_KEY='_v9uMG4rld75DaCLJQ44ZUG4GWT1wTn2ALVnIOW0XGMA'
 REGION='us-south'
 WATSONX_PROJECT_ID='cb6f383d-0f1c-4f86-9f19-c7245c025836'
